--- a/metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
@@ -1619,7 +1619,7 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
  	
     
     .mapMode .search-results{
-    	margin-top: 33px;
+    	margin-top: 80px;
     }
     
     .result-row {
